TweetyProject summer release 2019 (upd); fixed some minor issues, fixed JavaDoc